# pyINSYDE

./: README.md  pyproject.toml  requirements.txt
examples/: README.md  sa_example.ipynb
examples/environment/: environment.yml
insyde/: insyde.py
src/pyinsyde/: insyde.py  replacement_values.txt
test/: insyde_example.py  unit_test.py
